# agario-public

./: .gitignore  README.md  pyproject.toml
.dev/: notes.md
.github/workflows/: ci.yml  publish.yml
docs/: game_rules.md  releasing.md  scoring.md
scripts/: match_simulator.py
src/agario_kit/: __init__.py
src/agario_visualiser/: __init__.py  __main__.py  launch_local_match.py  visualiser_submission.py
src/agario_visualiser/examples/: __init__.py  example.py
src/engine/: __main__.py  game_engine.py
src/engine/config/: io_config.py
src/engine/game/: tile_subscriber.py
src/engine/interface/io/: censor_event.py  exceptions.py  game_result.py  input_validator.py  player_connection.py  process_groups.py
src/engine/interface/logging/: event_factory.py  event_inspector.py
src/engine/state/: blob_state.py  game_state.py  physics_utils.py  player_state.py  state_mutator.py
src/helper/: __main__.py  client_state.py  game.py  interface.py  state_mutator.py
src/helper/state/: README.md  client_player_state.py
src/lib/: __main__.py  base_model.py
src/lib/config/: arena.py  player.py
src/lib/game/: game_logic.py
src/lib/interact/: map.py  penguin.py
src/lib/interface/events/: base_event.py  typing.py  (+13 more)
src/lib/models/: blob_model.py  food_model.py  penguin_model.py  player_model.py  virus_model.py
tests/: censor_event_test.py  engine_main_test.py  game_logic_test.py  helper_state_surface_test.py  player_connection_test.py  process_groups_test.py  public_visibility_test.py  split_mechanics_test.py  validator_test.py  visualiser_submission_test.py
(+7 files in other folders)
