[project]
name = "agario-kit"
version = "2026.1.2"
description = "Public Agar.io competition package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dotmap>=1.3.30",
  "pydantic>=2.11.7",
]

[project.scripts]
private-engine = "engine.__main__:main"
interactive = "agario_visualiser.launch_local_match:interactive_main"
simulation = "agario_visualiser.launch_local_match:simulation_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "build",
  "mypy",
  "pre-commit",
  "pytest>=8.4.1",
  "twine",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/agario_kit",
  "src/agario_visualiser",
  "src/engine",
  "src/helper",
  "src/lib",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/agario_kit",
  "src/agario_visualiser",
  "src/engine",
  "src/helper",
  "src/lib",
  "examples",
  "docs",
  "tests",
  "scripts",
  ".gitignore",
  ".python-version",
  "README.md",
  "mypy.ini",
  "pyproject.toml",
  "ruff.toml",
]
